# mppi-gps

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  amother stand.mov  commands.md  main.py  pyproject.toml
assets/: acrobot.xml  acrobot_mjx.xml  hopper.xml  point_mass.xml
assets/adroit/: adroit_assets.xml  adroit_model.xml  relocate.xml
assets/adroit_pen/: adroit_pen.xml
assets/ur5/: scene.xml  ur5_robot.xml
checkpoints/: bc_acrobot.pt
configs/: acrobot_best.json  adroit_pen_best.json  adroit_relocate_best.json  adroit_relocate_correlated.json  hopper_best.json  hopper_best_old.json  point_mass_best.json  ur5_push_best.json
docs/: implementation_report.md
results/dagger_acrobot/: dagger_log.csv
scripts/: check_warp_sensors.py  collect_bc_demos.py  collect_demos.py  eval_checkpoint.py  eval_run.py  gen_adroit_relocate_noise_cov.py  plot_joint_angles.py  run_ablations.py  run_acrobot.py  run_adroit_pen.py  run_adroit_relocate.py  run_cheetah.py  run_dagger.py  run_gps.py  run_hopper.py  run_mppi.py  run_mppi_acrobot.py  run_mppi_cheetah.py  run_point_mass.py  run_sb3_baseline.py  run_ur5.py  test_sl.py  tune_acrobot.py  tune_mppi_cheetah.py  video_to_gif.py
scripts/tuning/: tune_acrobot.py  tune_hopper.py  tune_point_mass.py
scripts/visualisation/: plot_cost.py  plot_results.py  visualise_rollouts.py
src/: backend.py
src/envs/: __init__.py  acrobot.py  adroit_pen.py  adroit_relocate.py  adroit_relocate_warp.py  base.py  costs_jax.py  gym_wrapper.py  half_cheetah.py  hopper.py  hopper_warp.py  mjx_acrobot.py  mjx_env.py  mjx_half_cheetah.py  (+6 more)
(+26 files in other folders)
