[project]
name = "mppi-gps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8.0",
    "mujoco>=3.1.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "scipy>=1.12.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
]
