[project]
name = "mppi-gps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "h5py>=3.16.0",
    "imageio>=2.37.3",
    "ipdb>=0.13.13",
    "ipython>=9.10.0",
    "jax>=0.9.2",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.8.0",
    "mediapy>=1.2.6",
    "mujoco>=3.1.0",
    "mujoco-mjx>=0.1.0",
    "numpy>=1.26.0",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "pyyaml>=6.0",
    "scipy>=1.12.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "stable-baselines3>=2.3.0",
]

[project.optional-dependencies]
metal = ["jax-metal>=0.1.0"]
cuda = ["jax[cuda12]>=0.9.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
